css/style.css
body {
    margin: 0;
}

main, #intestazione, footer {
    width: 1700px;
}

/* Header */

#banner {
    height: 165px;
    background-image: url(../img/pattern.png);
    background-color: #4ea0ff;
    background-size: 620px;
    background-position: 117px 0;
    margin: 0;
    position: relative;
}

#the-booleaner-logo {
    height: 49.5%;
    position: absolute;
    left: 10px;
    bottom: 18px;
}

#titolo-articolo {
    font-size: 3.8em;
    margin-left: 10px;
    margin-top: 30px;
    margin-right: 200px;
    margin-bottom: 0;
    font-weight: 900;
    line-height: 1.1em;
}

.article-details {
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 10px;
    color: #808080;
}

#autore {
    font-size: 1.8em;
}

#data-articolo {
    font-size: 1.2em;
}

#author-name {
    color: #20a9e5  ;
}

/* /Header */

/* Main */

.articolo {
    margin-left: 10px;
}

#foto-articolo-container {
    margin-top: 30px;
    margin-bottom: 25px;
}

.foto-articolo {
    margin-bottom: 0;
    margin-right: 2px;
    height: 570px
}

.didascalia {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 1.2em;
}

#testo-articolo {
    font-size: 1.5em;
}

.highlight {
    background-color: yellow;
}

.paragrafo {
    margin-bottom: 40px;
}

.list {
    margin-left: 0;
    padding-left: 18px;
}

/* Table */

table {
    border-collapse:collapse
}

.small-cell {
    width: 25%;
}

.large-cell {
    width: 50%;
}

th {
    text-align: left;
    background-color: #20a9e5;
    color: white;
}

.odd-row {
    background-color: #b1e5f2;
}

/* /Table */

/* /Main */

/* Footer */

.footer-title {
    font-size: 1.5em;
    color: #929292;
}

.foto-footer {
    height: 190px;
    width: 250px;
    display: inline-block;
    color: white;
    font-size: 1.5em;
    margin: 10px;
    padding: 10px;
}

#foto-footer-uno {
    background-image: url(../img/monitor.jpg);
}

#foto-footer-due {
    background-image: url(../img/graph.jpg);
}

/* /Footer */

